--- a/assets/scss/components/_page.scss
+++ b/assets/scss/components/_page.scss
@@ -2,16 +2,16 @@
 
 .section-page {
   width: 100%;
-  display: flex;
-  flex-direction: column;
+  @include d-flex;
+  @include flex-direction(column);
   margin-top: $default-distance * 0.75;
 
   .section-header {
     margin-bottom: $default-distance;
 
     .section-title {
-      display: flex;
-      align-items: center;
+      @include d-flex;
+      @include align-items(center);
 
       & > span {
         font-weight: 600;
@@ -30,7 +30,7 @@
 
   .section-content {
     flex: 1;
-    display: flex;
-    flex-direction: column;
+    @include d-flex;
+    @include flex-direction(column);
   }
 }
