--- a/assets/scss/layouts/_login.scss
+++ b/assets/scss/layouts/_login.scss
@@ -1,3 +1,5 @@
+@use "../utils/index" as *;
+
 #login {
   .page-enter-active,
   .page-leave-active {
@@ -7,9 +9,9 @@
     position: relative;
   }
   .page-enter {
-    transform: translateX(-100%);
+    @include transform(translateX(-100%));
   }
   .page-leave-to {
-    transform: translateX(100%);
+    @include transform(translateX(100%));
   }
 }
