--- a/assets/scss/components/_page.scss
+++ b/assets/scss/components/_page.scss
@@ -7,6 +7,7 @@
   margin-top: $default-distance * 0.75;
 
   .section-header {
+    margin-top: 60px;
     margin-bottom: $default-distance;
 
     .section-title {
@@ -20,6 +21,10 @@
 
       .section-action {
         margin-left: auto;
+
+        .gv-input {
+          margin: 0;
+        }
       }
     }
   }
@@ -31,6 +36,7 @@
   .section-content {
     flex: 1;
     @include d-flex;
+    min-height: inherit;
     @include flex-direction(column);
   }
 }
