--- a/assets/scss/utils/_colors.scss
+++ b/assets/scss/utils/_colors.scss
@@ -1,5 +1,5 @@
 :root {
-  --gv-primary: #7778a3 !important;
-  --gv-accent: #4c4d7e !important;
-  --gv-color-link: var(--gv-color-font) !important;
+  // --gv-primary: #7778a3 !important;
+  // --gv-accent: #4c4d7e !important;
+  // --gv-color-link: var(--gv-color-font) !important;
 }
