--- a/assets/scss/components/_book.scss
+++ b/assets/scss/components/_book.scss
@@ -12,16 +12,24 @@
 
     & > .thumbnail {
       width: 110px;
-      height: 187px;
+      height: inherit;
+      position: relative;
       padding: 0 !important;
-
-      & > * {
+      
+      & > .gv-image {
         display: block;
         height: inherit;
+        max-height: 100%;
 
         & img {
           object-fit: cover;
         }
+      }
+
+      .wishlist-icon {
+        cursor: pointer;
+        font-size: $font-size * 1.5;
+        text-shadow: 0 1px 0 var(--gv-color-dgray);
       }
     }
 
@@ -29,16 +37,18 @@
       @include d-flex;
       @include flex(1);
       @include flex-direction(column);
-      padding: $default-distance * 0.5 !important;
+      padding: $default-distance * 0.75 !important;
 
       & > .info {
         @include d-flex;
         @include flex(1);
         @include flex-direction(column);
+        margin-bottom: $default-distance * 0.5;
 
         & > .title {
-          font-weight: 500;
+          font-weight: 300;
           line-height: 1.35;
+          @include line-clamp(2);
           font-size: $font-size * 0.875;
         }
 
@@ -52,7 +62,7 @@
         @include d-flex;
         @include justify-content(flex-end);
 
-        & > .product-count {
+        & > button {
           @include flex(1);
         }
       }
