--- a/assets/scss/components/_info.scss
+++ b/assets/scss/components/_info.scss
@@ -13,18 +13,16 @@
   }
 
   & > .wrapper {
-    width: 130px;
-    height: 150px;
+    height: 100px;
+    min-width: 80px;
     @include d-flex;
     @include user-select-none;
     @include flex-direction(column);
     @include justify-content(center);
-    @include border-radius($border-radius);
-    background-color: var(--gv-secondary-light);
 
     & > .icon {
       line-height: 1.5;
-      font-size: $font-size * 2;
+      font-size: $font-size * 1.5;
     }
 
     & > .title {
