--- a/assets/scss/components/_book.scss
+++ b/assets/scss/components/_book.scss
@@ -1,59 +1,86 @@
 @use "../utils/index" as *;
 
 .product-book {
+  border: 0 !important;
+  background-color: unset !important;
+
+  &:hover {
+    background-color: var(--gv-secondary-light) !important;
+  }
+
   &.sold-out {
     opacity: 0.5;
     pointer-events: none;
   }
 
   & > .gv-content {
-    height: 150px;
-    @include flex-direction(row !important);
-
     & > .thumbnail {
-      width: 110px;
-      height: inherit;
       position: relative;
-      padding: 0 !important;
-      
+      padding: $default-distance * 0.5 !important;
+
       & > .gv-image {
+        height: 400px;
         display: block;
-        height: inherit;
         max-height: 100%;
+        @include border-radius($border-radius);
+        box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+          0 1px 3px 1px rgb(60 64 67 / 15%);
 
         & img {
+          width: 100%;
           object-fit: cover;
         }
-      }
 
-      .wishlist-icon {
-        cursor: pointer;
-        font-size: $font-size * 1.5;
-        text-shadow: 0 1px 0 var(--gv-color-dgray);
+        .wishlist-icon {
+          top: 8px;
+          left: 8px;
+          cursor: pointer;
+          position: absolute;
+          font-size: $font-size * 1.5;
+        }
+
+        .product-rating {
+          top: 8px;
+          right: 8px;
+          position: absolute;
+
+          & > .rating {
+            @include d-flex;
+            color: var(--gv-color-white);
+            @include align-items(center);
+
+            span {
+              font-size: $font-size * 0.75;
+              margin-left: $default-distance * 0.25;
+            }
+          }
+        }
       }
     }
 
-    & > .side {
+    & > .footer {
       @include d-flex;
-      @include flex(1);
       @include flex-direction(column);
-      padding: $default-distance * 0.75 !important;
+      padding: 0 $default-distance * 0.5 $default-distance * 0.5
+        $default-distance * 0.5 !important;
 
       & > .info {
         @include d-flex;
-        @include flex(1);
         @include flex-direction(column);
-        margin-bottom: $default-distance * 0.5;
+        padding: 0 $default-distance * 0.35;
 
         & > .title {
+          height: 35px;
           font-weight: 300;
           line-height: 1.35;
+          letter-spacing: 1px;
           @include line-clamp(2);
           font-size: $font-size * 0.875;
         }
 
         & > .product-discount {
-          margin-top: auto;
+          @include justify-content(center);
+          margin: $default-distance * 0.35 0;
         }
       }
 
@@ -64,6 +91,18 @@
 
         & > button {
           @include flex(1);
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: $media-sm) {
+  .product-book {
+    & > .gv-content {
+      & > .thumbnail {
+        & > .gv-image {
+          height: 250px;
         }
       }
     }
