authors and books management tools for admin; bug fixes;

--- a/assets/scss/components/_item.scss
+++ b/assets/scss/components/_item.scss
@@ -2,14 +2,14 @@
 
 .product-item {
   .item-content {
-    & > *:first-child {
+    & > *:nth-child(2) {
       float: left;
       width: 150px;
       margin-right: $default-distance * 1.5;
       @include border-radius($border-radius !important);
     }
 
-    & > *:last-child {
+    & > *:nth-child(3) {
       margin: 0 auto;
     }
   }
